# kilio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  decisions.md
crates/kilio-core/: Cargo.toml
crates/kilio-core/src/: delivery.rs  domain.rs  lib.rs  reachability.rs  scoping.rs  store.rs
crates/kilio-seal/: Cargo.toml
crates/kilio-seal/src/: envelope.rs  ids.rs  keys.rs  lib.rs  pow.rs  receipt.rs
docs/: ARCHITECTURE.md  GETTING-STARTED.md  SECURITY.md
legacy/lalela-backend/: .gitignore  README.md  go.mod  go.sum  main.go  main.py  main.py.old  main.py.old.2
legacy/lalela-backend/cmd/: config.go  main.go  seed.go  utils.go
legacy/lalela-backend/cmd/casbin/: model.conf
legacy/lalela-backend/cmd/lalela/: config.go  main.go
legacy/lalela-backend/cmd/seed/: config.go  main.go
legacy/lalela-backend/cmd/seed/forms/: uischeme.json
legacy/lalela-backend/cmd/templates/: actionable_email.html
legacy/lalela-backend/config/: policy.csv
legacy/lalela-backend/internal/config/env/: env.toml
legacy/lalela-backend/internal/pkg/auth/: authenticator.go  authorizer.go  password.go  validation.go
legacy/lalela-backend/internal/pkg/authenticator/: authenticator.go
legacy/lalela-backend/internal/pkg/controllers/: auth.go  chat.go  dashboard.go  dashboards.go  dateProcessed.go  event.go  eventLogger.go  forms.go  groups.go  kanban.go  model.go  permission.go  permissions.go  rpc.go  submissions.go  user.go  users.go  utils.go
legacy/lalela-backend/internal/pkg/database/: db.go
legacy/lalela-backend/internal/pkg/dbSeed/: seed.go
legacy/lalela-backend/internal/pkg/email/: email.go
legacy/lalela-backend/internal/pkg/exception/: errors.go
legacy/lalela-backend/internal/pkg/forms/: forms.go
legacy/lalela-backend/internal/pkg/key/: parseRSAPrivateKeyFromString.go
legacy/lalela-backend/internal/pkg/middleware/: authentication.go  authorisation.go  getJSONRPCMethod.go  utils.go
legacy/lalela-backend/internal/pkg/models/: auth.go  casbin.go  chat.go  connectors.go  dashboard.go  event.go  forms.go  group.go  kanban.go  model.go  organizations.go  overview.go  permission.go  queries.go  submissions.go  user.go
legacy/lalela-backend/internal/pkg/mongo/: collection.go  errors.go  mongo.go  query.go
legacy/lalela-backend/internal/pkg/organizations/: organizations.go
legacy/lalela-backend/jsonforms/: package-lock.json  package.json
legacy/lalela-backend/jsonforms/src/: App.js  schema.json  schematest.json  uischema.json  uischematest.json
legacy/lalela-backend/models/: models.py
legacy/lalela-backend/routers/: auth.py  forms.py  submissions.py
legacy/lalela-frontend/: package-lock.json  package.json
legacy/lalela-frontend/src/: routes.tsx
site/: LICENSE.txt  docs.html  index.html
site/assets/brand/: README.md
web/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  main.jsx
web/src/handler/: Branches.jsx  CaseDetail.jsx  HandlerApp.jsx  Inbox.jsx  Settings.jsx  Shell.jsx  handler.css  icons.jsx  utils.js
web/src/lib/: theme.js
web/src/mock/: data.js
web/src/reporter/: Landing.jsx  NewReport.jsx  Receipt.jsx  ReporterApp.jsx  Return.jsx  Thread.jsx  format.js  icons.jsx  reporter.css
web/src/styles/: base.css  tokens.css
web/src/ui/: index.jsx  ui.css
web/tools/: shots.mjs
(+79 files in other folders)
