[workspace]
resolver = "2"
members = [
    "crates/kilio-seal",
    "crates/kilio-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vul-os/kilio"
authors = ["Vulos"]

[workspace.dependencies]
# crypto
hpke = { version = "0.12", default-features = false, features = ["x25519", "alloc"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
blake3 = { version = "1", default-features = false }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
bip39 = { version = "2", default-features = false, features = ["std"] }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
rand_core = { version = "0.6", default-features = false }
getrandom = { version = "0.2", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }
subtle = { version = "2", default-features = false }

# encoding
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
ciborium = { version = "0.2", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# storage
rusqlite = { version = "0.31", features = ["bundled"] }

# time
time = { version = "0.3", default-features = false, features = ["std"] }

# errors
thiserror = "1"
