[package]
name = "kilio-seal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sealed-submission crypto for kilio: HPKE seal-to-branch, receipt-derived per-claim keys, sealed-sender envelopes, and an anonymous proof-of-work cold-contact gate. Compiles native and wasm32."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hpke.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
argon2.workspace = true
bip39.workspace = true
rand.workspace = true
rand_core.workspace = true
zeroize.workspace = true
subtle.workspace = true
serde.workspace = true
ciborium.workspace = true
hex.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
rand = { version = "0.8", features = ["getrandom"] }

[features]
default = []
